# booktutor-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.deepseek2  README.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml
docs/: tui-design-brief.md
src/booktutor/: __init__.py  __main__.py  cli.py  config.py  ds2_server.py  factories.py  loaders.py  rag.py  vectorstore.py
src/booktutor/tui/: __init__.py  app.py  glyph.tcss
src/booktutor/tui/screens/: compare.py  engines.py  export.py  input.py  markdown.py  process.py
src/glyph/: __init__.py  __main__.py  cli.py  config.py  docling_server.py  ds2_server.py  loaders.py  progress.py  services.py
src/glyph/tui/: __init__.py  app.py  glyph.tcss  themes.py
src/glyph/tui/screens/: __init__.py  dashboard.py  dashboard_b.py  export.py  input.py  process.py
tests/: test_cli.py  test_config.py  test_docling_server.py  test_ds2_server.py  test_loaders.py  test_progress.py  test_services.py  test_tui.py  test_vectorstore.py
