[project]
name = "glyph-ai"
version = "0.3.0"
description = "OCR any PDF into high-quality Markdown (docling / DeepSeek-OCR)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.5.0",
]

[project.scripts]
glyph = "glyph.cli:main"
glyph-deepseek2-server = "glyph.ds2_server:main"

# OCR engines are mutually-exclusive dependency groups: docling needs
# transformers 5 (rt_detr_v2 layout model) while DeepSeek-OCR-2's remote code
# needs transformers <4.48 (LlamaFlashAttention2). They cannot share one venv, so
# each ships in its own image (Dockerfile / Dockerfile.deepseek2). `docling` is a
# default group, so `uv run glyph` works with no flag; for deepseek2 use
# `--no-group docling --group deepseek2`. The conflict (under [tool.uv]) keeps a
# single lockfile with both resolutions.
[dependency-groups]
# easyocr/tesseract engines + vlm (DeepSeek-OCR v1 over an OpenAI-compatible
# vision endpoint) + the glyph TUI. easyocr/tesserocr are docling extras (2.10x).
docling = [
    "docling[easyocr,tesserocr]>=2.107.0",
    "huggingface-hub[hf-xet]>=0.32.3",
    "openai>=1.30.0",
    "torch>=2.7.1",
    "textual>=0.80",
]
# DeepSeek-OCR-2 in-process via transformers (trust_remote_code). No docling.
# flash-attn is optional (set DS2_ATTN_IMPL=flash_attention_2 if installed).
deepseek2 = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.46.3,<4.48",
    "huggingface-hub[hf-xet]>=0.32.3",
    "einops>=0.8.0",
    "addict>=2.4.0",
    "easydict>=1.13",
    "matplotlib>=3.8.0",
    "pypdfium2>=4.30",
    "pillow>=10.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glyph"]

[tool.uv]
# docling is installed by default (no --extra needed); deepseek2 is opt-in.
default-groups = ["dev", "docling"]
# docling and deepseek2 pull incompatible transformers majors; mark them as
# conflicting so uv resolves each branch separately into one lockfile.
conflicts = [
    [{ group = "docling" }, { group = "deepseek2" }],
]
# Hold only the GPU pair at a CUDA-consistent (cu128) version: a blind torch
# bump pulls a torchvision built against cu130 -> "compiled with different CUDA
# major versions" at import.
constraint-dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
